    + [NT] Apply patch from Helmut Grohne to detect some possible invalid
      uses of "Multi-Arch: foreign".  (Closes: #856975)
    + [NT] Improve the empty-binary-package tag by adding more common
      files that should be ignored.  Thanks to Helmut Grohne for all the
      research behind it.  (Closes: #856857)
    + [BR] Detect symlink pointing to builddir.  (Closes: #860419)
  * checks/gir.{desc,pm}:
    + [NT] Add check for gir packages written by Simon McVittie.
      (Closes: #695345)
  * checks/init.d.{desc,pm}:
    + [NT] Remove check for init.d scripts accessing /usr without a
      $remote_fs dependency as /usr must now be mounted by the initramfs.
      (Closes: #829649)
  * checks/menu-format.{desc,pm}:
    + [NT] Update the reference to Desktop Entry Specification to point
      to version 1.1.
    + [NT] Apply patch from Laurent Bigonville to check desktop files
      for missing "Icon" field.  (Closes: #854132)
  * checks/rules.{desc,pm}:
    + [NT] Drop "package-would-benefit-from-build-arch-targets".  The
      dpkg-buildpackage refuses to build packages that trigger this tag.
      Also, the tag implies two other "W" tags so contributors are still
      notified of a potential problem.
    + [CL] Check for manual parsing of dpkg-parsechangelog output now that
      we have /usr/share/dpkg/pkg-info.mk.
  * checks/scripts.pm:
    + [NT] Apply patch from Christopher Hoskin to except -doc packages
      from the "new-package-should-not-package-python2-module" tag.
      (Closes: #855243)
  * checks/systemd.{desc,pm}:
    + [NT] Apply patch from Michael Biebl to warn about deprecated
      "BindTo" option in systemd service files.  (Closes: #857194)
  * checks/testsuite.{desc,pm}:
    + [NT] Apply patch from Lucas Kanashiro to add a tag for recommending
      packagers to create an autopkgtest for their package.
      (Closes: #859467)
    + [NT] Fix false-positive "missing-runtime-test-file" when the