@@ -1,0 +1,4 @@
+E: files-r-data: r-data-without-readme-source usr/lib/R/site-library/files-r-data/test.Rda
+E: files-r-data: r-data-without-readme-source usr/lib/R/site-library/files-r-data/test.Rdata
+E: files-r-data: r-data-without-readme-source usr/lib/R/site-library/files-r-data/test.rda
+E: files-r-data: r-data-without-readme-source usr/lib/R/site-library/files-r-data/test.rdata
